--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:launchMode="singleTask">
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -22,6 +24,18 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".WheresMyCarMainActivity"
+            android:label="@string/title_activity_wheres_my_car_main" >
+        </activity>
+        <activity
+            android:name=".WhatHappenedTodayMainActivity"
+            android:label="@string/title_activity_what_happened_today_main" >
+        </activity>
+        <activity
+            android:name=".WhatsThisMainActivity"
+            android:label="@string/title_activity_whats_this_main" >
         </activity>
     </application>
 
