--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -43,8 +43,12 @@
             android:label="@string/title_activity_whats_this_main" >
         </activity>
         <activity
-            android:name=".WhatHappenedTodayNoteActivity"
+            android:name=".WhatHappenedTodaySubjectActivity"
             android:label="@string/title_activity_what_happened_today_note" >
+        </activity>
+        <activity
+            android:name=".WhatHappendTodayNoteActivity"
+            android:label="@string/title_activity_what_happend_today_note" >
         </activity>
     </application>
 
