--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -39,48 +40,54 @@
         </activity>
         <activity
             android:name=".WheresMyCarMainActivity"
-            android:label="@string/title_activity_wheres_my_car_main" >
+            android:label="@string/title_activity_wheres_my_car_main"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".WhatHappenedTodayMainActivity"
-            android:label="@string/title_activity_what_happened_today_main" >
+            android:label="@string/title_activity_what_happened_today_main"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".WhatsThisMainActivity"
-            android:label="@string/title_activity_whats_this_main" >
+            android:label="@string/title_activity_whats_this_main"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".WhatHappenedTodaySubjectActivity"
-            android:label="@string/title_activity_what_happened_today_note" >
+            android:label="@string/title_activity_what_happened_today_note"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".WhatHappendTodayNoteActivity"
-            android:label="@string/title_activity_what_happend_today_note" >
+            android:label="@string/title_activity_what_happend_today_note"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".WhatsThisAddContentActivity"
-            android:label="@string/title_activity_whats_this_add_content" >
+            android:label="@string/title_activity_whats_this_add_content"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".WhatsThisPlacesActivity"
-            android:label="" >
+            android:label=""
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".WhatsThisDataDisplayActivity"
-            android:label="" >
+            android:label=""
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".WheresMyCarTravelActivity"
-            android:label="@string/title_activity_wheres_my_car_travel" >
+            android:label="@string/title_activity_wheres_my_car_travel"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".WhatsThisImageDisplayActivity"
-            android:label="@string/title_activity_whats_this_image_display" >
-        </activity>
-        <activity
-            android:name=".WheresMyCarTestActivity"
-            android:label="@string/title_activity_wheres_my_car_test" >
-        </activity>
+            android:label="@string/title_activity_whats_this_image_display"
+            android:screenOrientation="portrait">
+        </activity> 
     </application>
 
 </manifest>
